# integumodel

./: Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
integumodel/: __init__.py
tests/: __init__.py  test_integumodel.py
