[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "integumodel"
author = "Brendan Strejcek"
author-email = "brendan@datagazing.com"
home-page = "https://github.com/datagazing/integumodel"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.rst"
requires-python = ">=3.7"
#requires = ["attrs", "dotmap"]

#[tool.flit.scripts]
#xscript = "xmodule:xfunction"
#integumodel = "integumodel:integumodel"
